dev: new import

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Materia</title>
 
-    <!-- Přidání Material Symbols fontu -->
+    <!-- Load Google Fonts for Material Design 3 -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
+    <!-- Load Material Symbols (Outlined style) -->
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    
 </head>
 <body>
     <script type="module" src="./js/index.js"></script>
