--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Materia</title>
-
-    <!-- Load Google Fonts for Material Design 3 -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
-    <!-- Load Material Symbols (Outlined style) -->
-    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    <link rel="stylesheet" href="../build/css/materia.min.css" />
     
 </head>
 <body>
-    <script type="module" src="./js/index.js"></script>
+    <h1>hello</h1>
 </body>
 </html>
